--- a/paiN/contato.html
+++ b/paiN/contato.html
@@ -38,6 +38,42 @@
           </div>
         </div>
       </nav>
+
+      <header class="bg-yellow">
+        <div class="container">
+          <h1>Fale Conosco | Pastelaria do Seu Zé</h1>
+        </div>
+      </header>
+    
+      <section class="container my-4">
+        <div class="row">
+          <div class="col-md-6">
+          
+          </div>
+          <div class="col-md-6">
+            <div class="business-hours">
+              <h2>Horário de Funcionamento</h2>
+              <p>Atendimento no Salão</p>
+              <p>De Segunda a Quinta das 8h às 21h</p>
+              <p>De Sexta-feira das 8h às 22h</p>
+              <p>De Sábado das 8h às 21h</p>
+              <p>Atendimento Delivery</p>
+              <p>De Segunda a Quinta das 12h às 20:30h</p>
+              <p>De Sexta-feira das 11h às 21:30h</p>
+              <p>De Sábado das 11h às 20:30h</p>
+              <p>Domingos e feriados estaremos fechados</p>
+            </div>
+            <div class="attention">
+              <h2>ATENÇÃO:</h2>
+              <p>Encomendas somente pelos Telefones:</p>
+              <p>(11)3865-3089</p>
+              <p>(11)3872-9941</p>
+              <p>(11)95077-1355</p>
+              <p>Tradição desde 1972</p>
+            </div>
+          </div>
+        </div>
+      </section>
  
  
 
