--- a/paiN/cardapio.html
+++ b/paiN/cardapio.html
@@ -13,10 +13,12 @@
 </head>
 <body>
 
-  
+ 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-          <a class="navbar-brand" href="index.html">Pastelaria do Seu Zé</a>
+          <a class="navbar-brand" href="index.html">
+            <img src="images/logo.png" alt="Logo da Pastelaria do Seu Zé">
+            Pastelaria do Seu Zé</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -38,6 +40,12 @@
           </div>
         </div>
       </nav>
+      <div class="welcome-message">
+        <div class="container">
+          <h1>Cardápio</h1>
+          
+        </div>
+      </div>
 
  
  <section id="cardapio">
