--- a/paiN/index.html
+++ b/paiN/index.html
@@ -17,7 +17,9 @@
   
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-          <a class="navbar-brand" href="index.html">Pastelaria do Seu Zé</a>
+          <a class="navbar-brand" href="index.html">
+            <img src="images/logo.png" alt="Logo da Pastelaria do Seu Zé">
+            Pastelaria do Seu Zé</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -81,50 +83,6 @@
       </div>
     </div>
   </section>
-
-  <section id="tipos-de-pasteis">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <div class="pastel-info">
-            <div class="pastel-icon">
-              <img src="images/carne.jpg" alt="Pastel 1">
-            </div>
-            <div class="pastel-details">
-              <h3>Pastel de Carne</h3>
-              <p>Pastel recheado com carne moída, cebola e temperos especiais.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="pastel-info">
-            <div class="pastel-icon">
-              <img src="images/queijo.jpg" alt="Pastel 2">
-            </div>
-            <div class="pastel-details">
-              <h3>Pastel de Queijo</h3>
-              <p>Pastel recheado com queijo derretido e orégano.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="pastel-info">
-            <div class="pastel-icon">
-              <img src="images/frango.jpg" alt="Pastel 3">
-            </div>
-            <div class="pastel-details">
-              <h3>Pastel de Frango</h3>
-              <p>Pastel recheado com frango desfiado e catupiry.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  
-  
-
   
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
