--- a/paiN/sobre-nos.html
+++ b/paiN/sobre-nos.html
@@ -16,7 +16,9 @@
   
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-          <a class="navbar-brand" href="index.html">Pastelaria do Seu Zé</a>
+          <a class="navbar-brand" href="index.html">
+            <img src="images/logo.png" alt="Logo da Pastelaria do Seu Zé">
+            Pastelaria do Seu Zé</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
