--- a/paiN/cardapio.html
+++ b/paiN/cardapio.html
@@ -12,45 +12,44 @@
   <link href="style.css" rel="stylesheet">
 </head>
 <body>
-
- 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-          <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="Logo da Pastelaria do Seu Zé">
-            Pastelaria do Seu Zé</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">Início</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="cardapio.html">Cardápio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="sobre-nos.html">Sobre Nós</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contato.html">Contato</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <div class="welcome-message">
-        <div class="container">
-          <h1>Cardápio</h1>
-          
-        </div>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">
+        <img src="images/logo.png" alt="Logo da Pastelaria do Seu Zé">
+        Pastelaria do Seu Zé</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Início</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="cardapio.html">Cardápio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="sobre-nos.html">Sobre Nós</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contato.html">Contato</a>
+          </li>
+        </ul>
       </div>
+    </div>
+  </nav>
+  <div class="welcome-message">
+    <div class="container">
+      <h1>Cardápio</h1>
+    </div>
+  </div>
 
- 
- <section id="cardapio">
+  <section id="cardapio">
     <div class="container">
       <div class="row">
+        <div class="col-12">
+          <h2>Pasteis Salgados</h2>
+        </div>
         <div class="col-md-4">
           <div class="pastel-item">
             <div class="pastel-image">
@@ -88,12 +87,60 @@
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="col-12">
+          <h2>Pasteis Doces</h2>
+        </div>
+        <div class="col-md-4">
+          <div class="pastel-item">
+            <div class="pastel-image">
+              <img src="images/doce.jpg" alt="Pastel Doce Sabor 1">
+            </div>
+            <div class="pastel-details">
+              <h3>Pastel de Doce de Leite</h3>
+              <p>Pastel recheado com Doce de Leite.</p>
+              <p>Valor: R$ 12,00</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="pastel-item">
+            <div class="pastel-image">
+              <img src="images/morango.jpg" alt="Pastel Doce Sabor 1">
+            </div>
+            <div class="pastel-details">
+              <h3>Pastel de Morango com Chocolate</h3>
+              <p>Pastel recheado com chocolate ao leite e pedaços de morango.</p>
+              <p>Valor: R$ 12,00</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="pastel-item">
+            <div class="pastel-image">
+              <img src="images/chocolate.jpg" alt="Pastel Doce Sabor 1">
+            </div>
+            <div class="pastel-details">
+              <h3>Pastel de Chocolate</h3>
+              <p>Pastel recheado com chocolate ao leite.</p>
+              <p>Valor: R$ 12,00</p>
+            </div>
+          </div>
+        </div>
+        
+      </div>
     </div>
   </section>
 
+  <footer>
+    <div class="container">
+      <p>Rua do Seu Zé, 473 - Bairro do Pastel</p>
+      <p>Telefone: (11) 1234-5678</p>
+    </div>
+  </footer>
   
 
-  
+
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
