--- a/paiN/contato.html
+++ b/paiN/contato.html
@@ -50,20 +50,21 @@
       <section class="container my-4">
         <div class="row">
           <div class="col-md-6">
-          
+            <img src="images/padaria.jpg" alt="Endereço da Pastelaria" class="img-fluid">
+            <p class="text-center">Rua do Seu Zé, 473 - Bairro do Pastel</p>
           </div>
           <div class="col-md-6">
             <div class="business-hours">
               <h2>Horário de Funcionamento</h2>
               <p>Atendimento no Salão</p>
-              <p>De Segunda a Quinta das 8h às 21h</p>
-              <p>De Sexta-feira das 8h às 22h</p>
+              <p>De Segunda a Sexta das 8h às 22h</p>
               <p>De Sábado das 8h às 21h</p>
+              <p>De Domingo das 8h às 20h</p>
               <p>Atendimento Delivery</p>
               <p>De Segunda a Quinta das 12h às 20:30h</p>
               <p>De Sexta-feira das 11h às 21:30h</p>
               <p>De Sábado das 11h às 20:30h</p>
-              <p>Domingos e feriados estaremos fechados</p>
+              <p>Feriados estaremos fechados</p>
             </div>
             <div class="attention">
               <h2>ATENÇÃO:</h2>
@@ -71,15 +72,20 @@
               <p>(11)3865-3089</p>
               <p>(11)3872-9941</p>
               <p>(11)95077-1355</p>
-              <p>Tradição desde 1972</p>
+              <p>Tradição desde 1972.</p>
             </div>
           </div>
         </div>
       </section>
- 
- 
 
-  
+      <footer>
+        <div class="container">
+          <p>Rua do Seu Zé, 473 - Bairro do Pastel</p>
+          <p>Telefone: (11) 1234-5678</p>
+        </div>
+      </footer>
+      
+ 
 
   
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
