--- a/paiN/sobre-nos.html
+++ b/paiN/sobre-nos.html
@@ -13,36 +13,65 @@
 </head>
 <body>
 
-  
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-          <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="Logo da Pastelaria do Seu Zé">
-            Pastelaria do Seu Zé</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">Início</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="cardapio.html">Cardápio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="sobre-nos.html">Sobre Nós</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contato.html">Contato</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
  
- 
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">
+        <img src="images/logo.png" alt="Logo da Pastelaria do Seu Zé">
+        Pastelaria do Seu Zé</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Início</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="cardapio.html">Cardápio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="sobre-nos.html">Sobre Nós</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contato.html">Contato</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="welcome-message">
+    <div class="container">
+      <h1>Sobre Nós</h1>
+    </div>
+  </div>
 
+  <section id="cardapio">
+    <div class="container">
+    
+    </div>
+  </section>
+
+  <section id="sobre-nos">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h2>Sobre Nós</h2>
+          <p>A Pastelaria do Seu Zé foi fundada em 1972 por José Silva, conhecido carinhosamente como Seu Zé. Desde então, temos nos dedicado a proporcionar aos nossos clientes os melhores pasteis da região, utilizando ingredientes frescos e receitas tradicionais.</p>
+        </div>
+        <div class="col-md-6">
+          <img src="images/antigo.webp" alt="Foto da Padaria" class="img-fluid">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">
+      <p>Rua do Seu Zé, 473 - Bairro do Pastel</p>
+      <p>Telefone: (11) 1234-5678</p>
+    </div>
+  </footer>
   
 
   
